додав секцію галерея

--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,26 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/how-its-made.html"></include>
+    <include src="./partials/gallery.html"></include>
     <include src="./partials/slidebar.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <!-- <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+    <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
+    <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.js"></script>
+    <script>
+      var $grid = $('.gallery').imagesLoaded(function () {
+        // init Masonry after all images have loaded
+        $grid.masonry({
+          // options
+          itemSelector: '.item',
+          columnWidth: 100,
+          gutter: 10
+        });
+      });
+    </script> -->
     <script src="./index.js"></script>
   </body>
 </html>
