--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/how-its-made.html"></include>
+    <include src="./partials/advantages.html"></include>
     <include src="./partials/slidebar.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
