--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <!-- <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
     <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.js"></script>
     <script>
@@ -41,7 +41,7 @@
           gutter: 10
         });
       });
-    </script> -->
+    </script>
     <script src="./index.js"></script>
   </body>
 </html>
