--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <include src="./partials/products.html"></include>
     <include src="./partials/how-its-made.html"></include>
     <include src="./partials/slidebar.html"></include>
+    <include src="./partials/reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
 
