--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,8 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/how-its-made.html"></include>
-    <include src="./partials/gallery.html"></include>
     <include src="./partials/advantages.html"></include>
-    <include src="./partials/slidebar.html"></include>
+    <include src="./partials/gallery.html"></include>
     <include src="./partials/reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
@@ -40,7 +39,7 @@
           // options
           itemSelector: '.item',
           columnWidth: 100,
-          gutter: 10
+          gutter: 10,
         });
       });
     </script>
