Added link to ./sass/main.css in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-    <!-- <link rel="stylesheet" href="./sass/main.css" /> -->
+    <link rel="stylesheet" href="./sass/main.css" />
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
