--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,13 @@
     <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
     <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.js"></script>
     <script>
-      var $grid = $('.gallery').imagesLoaded(function () {
-        // init Masonry after all images have loaded
-        $grid.masonry({
-          // options
+
+      jQuery(document).ready(function ($) {
+          $('.gallery-masonry').masonry({
+        // options
           itemSelector: '.item',
-          columnWidth: 100,
-          gutter: 10,
+          columnWidth: '.persent-size',
+          percentPosition: true
         });
       });
     </script>
