--- a/src/index.html
+++ b/src/index.html
@@ -36,16 +36,16 @@
     <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
     <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.js"></script>
     <script>
-
       jQuery(document).ready(function ($) {
-          $('.gallery-masonry').masonry({
-        // options
+        $('.gallery-masonry').masonry({
+          // options
           itemSelector: '.item',
           columnWidth: '.persent-size',
-          percentPosition: true
+          percentPosition: true,
         });
       });
     </script>
+    <script src="./modal.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
