--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+    <include src="./partials/modal.html"></include>
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/products.html"></include>
@@ -46,5 +47,6 @@
       });
     </script>
     <script src="./index.js"></script>
+    <script src="./modal.js"></script>
   </body>
 </html>
