Added mobile menu.

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
       });
     </script>
     <script src="./index.js"></script>
-    <script src="./modal.js"></script>
+    <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
